Attempt to fix responsiveness of interests section on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,67 +36,6 @@
   /* Style for blue lines - NOT CURRENTLY USED */
 
 
-  
-  /*------------------------*/
-  /* Row and column styling */
-  /*------------------------*/
-  .column-1of2 {
-    float: left;
-    width: 50%;
-    font-size: 18px;
-    padding-right: 2em;
-    }
-
-  .column-2of2 {
-    float: left;
-    width: 50%;
-    font-size: 18px;
-  }
-  
-  
-  .column-3 {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-  }
-  
-  /* Remove extra left and right margins, due to padding */
-  .row {margin: 0 -5px;}
-
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-
-
-    /* Responsive layout - when the screen is more than 600px wide and less than 1200 px wide, 
-    make the two columns stack on top of each other instead of next to each other */
-    @media screen and (min-width: 600px) and (max-width: 1175px) {
-      .column-1of2, .column-2of2 {
-        width: 100%;
-        display: block;
-        margin-bottom: 20px;
-        text-align:center!important;
-        float: none;
-      }
-    }
-  
-  /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on 
-  top of each other instead of next to each other and reduce font size */
-  @media screen and (max-width: 600px) {
-    .column-1of2, .column-2of2, {
-      width: 100%;
-      display: block;
-      margin-bottom: 20px;
-      font-size: 15px;
-      text-align:center!important;
-      float: none;
-    }
-  }
-
 
   
   /* ----------------------------------------------------------------------------- */
@@ -557,13 +496,40 @@ input[type=button].btn-read-more,input[type=reset].btn-read-more,input[type=subm
 }
 
 
+    /*  Responsive layout - when the device width is less than 1024px wide, make the two columns stack on 
+  top of each other instead of next to each other and reduce font size  */
+    @media only screen and (max-device-width: 1024px) {
+
+      
+    /* For elements in cont-2-1 */
+
+    .cont-2-1{
+      flex-wrap: wrap;
+    }
+  
+    .cont-2-1-1{
+      width: 100%;
+    }
+
+    .cont-2-1-2{
+      width: 100%;
+      
+    }
+    
+    
+
+   }
 
 
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on 
-  top of each other instead of next to each other and reduce font size */
+
+
+
+
+/* Responsive layout - when the screen is less than 1175px wide, make the two columns stack on 
+  top of each other instead of next to each other*/
   @media screen and (max-width: 1175px) {
     
-    /* For elements in cont-1-1 */
+    /* For elements in cont-2-1 */
 
     .cont-2-1{
       flex-wrap: wrap;
